--- a/sentimentAnalyzeClient/src/App.css
+++ b/sentimentAnalyzeClient/src/App.css
@@ -13,6 +13,11 @@
   }
 }
 
+.emotions {
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
